@@ -1,7 +1,5 @@
                     Possible NEW FEATURES
                     
-An option not to use LOOP data for the stats file data.
-
 Allow continuation lines in ConfigObj. This would require writing a super
 class to the facility.
 
@@ -34,6 +32,8 @@ databases and, instead, offer up the last record when the reporting thread
 starts.
 
 A QC "Spike" detector.
+
+Harden up the MySQL database connection.
 
 Allow reporting services to be fired off at something other than every
 archive period. In particular, FTP.
